# skilltotal

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RULES_CHANGELOG.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: architecture.md  contributing-rules.md  corpus-report.json  corpus-report.md  detection-coverage.md  efficacy-report.json  efficacy-report.md  language-scope.md  mcp-owasp-mapping.md  open-core.md  owasp-agentic-skills-mapping.md  publishing-setup.md  releasing.md  report-schema.md  report.schema.json  scoring.md  trait-crosswalk.md
examples/: github-action.yml
skilltotal/: __init__.py  __main__.py  agent_skill.py  baseline.py  capabilities.py  cli.py  collector.py  combinations.py  config.py  diff.py  engine.py  file_index.py  guard.py  inventory.py  mcp_server.py  models.py  owasp.py  provenance.py  report.py  rules.py  sarif.py  sbom.py  scoring.py  text_normalize.py  traits.py  typosquatting.py
skilltotal/scanners/: __init__.py  base.py  dynamic_code.py  email_exfil.py  encrypted_archive.py  exposure.py  filesystem.py  install_scripts.py  invisible_unicode.py  mcp.py  network.py  oauth_auth.py  obfuscation.py  prompt_surface.py  pth_exec.py  python_ast.py  scoped_identity.py  secrets.py  sensitive_paths.py  shell_evasion.py  shell_exec.py  shell_script.py
tests/: conftest.py  test_agent_skill.py  test_baseline.py  test_calibrate.py  test_calibration.py  test_capabilities.py  test_cli.py  test_collector_local.py  test_collector_packages.py  test_collector_urls.py  test_combinations.py  test_command_injection.py  test_config_and_ignores.py  test_context_demotion.py  test_corpus_report.py  test_deserialization.py  test_diff.py  test_discover_mcp.py  test_efficacy.py  test_efficacy_floor.py  test_email_exfil.py  test_encrypted_archive.py  test_exposure.py  test_file_index.py  test_flow_and_convergence.py  test_guard.py  test_install_dropper.py  test_inventory.py  test_invisible_unicode.py  test_mcp_scope.py  test_mcp_server.py  test_models.py  test_oauth_auth.py  test_obfuscation_minified.py  test_offline_calibration.py  test_owasp_mapping.py  test_policy.py  test_prompt_jailbreak.py  test_provenance.py  test_pth_exec.py  (+19 more)
tests/eval_corpus/: README.md
tests/fixtures/clean_pkg/: README.md  pyproject.toml
tests/fixtures/fp_commented_secret/: box_connector.py
tests/fixtures/fp_e2e_tests/: package.json
tests/fixtures/fp_eval_dataset/: pyproject.toml
tests/fixtures/fp_live_secret_py/: config.py
tests/fixtures/fp_rust_inline_test_secret/: Cargo.toml
tests/fixtures/fp_shell_comment/: install.sh
tests/fixtures/fp_webhook_headers/: openapi.json
tests/manual_eval/: README.md  calibrate.py  corpus_report.py  discover_mcp.py  efficacy.py  fetch_corpus.py  gen_zero_width.py  report_manifest.csv  run_eval.py
(+90 files in other folders)
